# drt-contract-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml  on_pull_request_build_contracts.yml  release.yml
contracts/adder/: Cargo.toml  mxsc-template.toml
contracts/bonding-curve-contract/: Cargo.toml
contracts/check-pause/: Cargo.toml
contracts/crowdfunding-dct/: .gitignore  Cargo.toml
contracts/crypto-bubbles/: Cargo.toml
contracts/crypto-bubbles/meta/: Cargo.toml
contracts/crypto-bubbles/meta/src/: main.rs
contracts/crypto-bubbles/scenarios/: balanceOf.scen.json  create.scen.json  exceptions.scen.json  joinGame.scen.json  rewardAndSendToWallet.scen.json  rewardWinner.scen.json  rewardWinner_Last.scen.json  topUp_ok.scen.json  topUp_withdraw.scen.json  withdraw_Ok.scen.json  withdraw_TooMuch.scen.json
contracts/crypto-bubbles/src/: crypto_bubbles.rs
contracts/crypto-bubbles/tests/: crypto_bubbles_scenario_go_test.rs  crypto_bubbles_scenario_rs_test.rs
contracts/crypto-bubbles/wasm/: Cargo.toml
contracts/crypto-bubbles/wasm/src/: lib.rs
contracts/crypto-kitties/: documentation.md
contracts/crypto-zombies/: .gitignore  Cargo.toml  mxsc-template.toml
contracts/dct-transfer-with-fee/: Cargo.toml
contracts/digital-cash/: Cargo.toml
contracts/dn404/: Cargo.toml
contracts/empty/: Cargo.toml  mxsc-template.toml
contracts/erc3643/: Cargo.toml
contracts/factorial/: Cargo.toml
contracts/fair-launch/: Cargo.toml  readme.md
contracts/fair-launch/meta/: Cargo.toml
contracts/fair-launch/meta/src/: main.rs
contracts/fair-launch/src/: common.rs  exchange_actions.rs  initial_launch.rs  lib.rs  token_info.rs  transfer.rs
contracts/fair-launch/tests/: fair_launch_test.rs  tests_common.rs
contracts/fair-launch/wasm/: Cargo.toml
contracts/fair-launch/wasm/src/: lib.rs
contracts/fractional-nfts/: Cargo.toml  readme.md
contracts/fractional-nfts/meta/: Cargo.toml
contracts/fractional-nfts/meta/src/: main.rs
contracts/fractional-nfts/src/: fractional_nfts.rs  fractional_uri_info.rs
contracts/fractional-nfts/wasm/: Cargo.toml
contracts/fractional-nfts/wasm/src/: lib.rs
contracts/liquid-locking/: Cargo.toml  README.md
contracts/liquid-locking/meta/: Cargo.toml
contracts/liquid-locking/meta/src/: main.rs
contracts/liquid-locking/scenarios/: empty.scen.json
contracts/liquid-locking/src/: lib.rs  unlocked_token.rs
contracts/liquid-locking/tests/: liquid_locking_test.rs
contracts/liquid-locking/wasm/: Cargo.toml
contracts/liquid-locking/wasm/src/: lib.rs
contracts/lottery-dct/: Cargo.toml  documentation.md
contracts/multisig/: Cargo.toml  README.md
contracts/multisig/interact/: Cargo.toml  config.toml
contracts/multisig/interact/src/: multisig_interact.rs  multisig_interact_cli.rs  multisig_interact_config.rs  multisig_interact_nfts.rs  multisig_interact_state.rs  multisig_interact_wmoax.rs
contracts/multisig/meta/: Cargo.toml
contracts/multisig/scenarios/: call_other_shard-1.scen.json  call_other_shard-2.scen.json  changeQuorum.scen.json  deployAdder_err.scen.json  deployAdder_then_call.scen.json  deployFactorial.scen.json  deployOtherMultisig.scen.json  deploy_duplicate_bm.scen.json  interactor_nft.scen.json  interactor_nft_all_roles.scen.json  interactor_wmoax.scen.json  remove_everyone.scen.json  sendDct.scen.json  upgrade.scen.json  upgrade_from_source.scen.json
contracts/multisig/scenarios/steps/: deploy.steps.json  deploy_minimal.steps.json  init_accounts.steps.json
contracts/multisig/src/: action.rs  multisig.rs  multisig_events.rs  multisig_perform.rs  multisig_propose.rs  multisig_sign.rs  multisig_state.rs
contracts/multisig/tests/: multisig_blackbox_test.rs  multisig_scenario_go_test.rs  multisig_scenario_rs_test.rs  multisig_whitebox_test.rs
contracts/multisig/wasm/: Cargo.toml
contracts/multisig/wasm-multisig-full/: Cargo.toml
contracts/multisig/wasm-multisig-full/src/: lib.rs
contracts/multisig/wasm-multisig-view/: Cargo.toml
contracts/multisig/wasm/src/: lib.rs
contracts/mvx-game-sc/: .gitignore  Cargo.toml  README.md
contracts/mystery-box/: Cargo.toml
contracts/nft-escrow/: Cargo.toml
contracts/nft-minter/: Cargo.toml  readme.md
contracts/nft-storage-prepay/: Cargo.toml
contracts/on-chain-claim/: Cargo.toml  README.md  mxsc-template.toml
contracts/on-chain-claim/interaction/: devnet.snippets.sh  mainnet.snippets.sh  testnet.snippets.sh
contracts/on-chain-claim/meta/: Cargo.toml
contracts/on-chain-claim/meta/src/: main.rs
contracts/on-chain-claim/src/: address_info.rs  config.rs  contract.rs
contracts/on-chain-claim/tests/: tests.rs
contracts/on-chain-claim/wasm/: Cargo.toml
contracts/on-chain-claim/wasm/src/: lib.rs
contracts/order-book/: .gitignore
contracts/pair-mock/: Cargo.toml
contracts/paymaster/: Cargo.toml  README.md
contracts/paymaster/meta/: Cargo.toml
contracts/paymaster/meta/src/: main.rs
contracts/paymaster/scenarios/: empty.scen.json
contracts/paymaster/src/: forward_call.rs  paymaster.rs
contracts/paymaster/tests/: paymaster_blackbox_test.rs
contracts/paymaster/wasm/: Cargo.toml
contracts/paymaster/wasm/src/: lib.rs
contracts/price-aggregator/: Cargo.toml
contracts/price-aggregator/meta/: Cargo.toml
contracts/price-aggregator/meta/src/: main.rs
contracts/price-aggregator/src/: events.rs  lib.rs  median.rs  price_aggregator_data.rs  staking.rs
contracts/price-aggregator/tests/: price_aggregator_blackbox_test.rs  price_aggregator_whitebox_test.rs
contracts/price-aggregator/wasm/: Cargo.toml
contracts/price-aggregator/wasm/src/: lib.rs
contracts/wmoax-swap/: .gitignore  Cargo.toml  README.md
contracts/wmoax-swap/interaction/: snippets.sh
contracts/wmoax-swap/meta/: Cargo.toml
contracts/wmoax-swap/meta/src/: main.rs
contracts/wmoax-swap/scenarios/: unwrap_moax.scen.json  wrap_moax.scen.json
contracts/wmoax-swap/src/: wmoax.rs
contracts/wmoax-swap/tests/: scenario_go_test.rs  wmoax_swap_scenario_rs_test.rs
contracts/wmoax-swap/wasm/: Cargo.toml
contracts/wmoax-swap/wasm/src/: lib.rs
(+370 files in other folders)
