[package]
name = "crypto-bubbles"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/crypto_bubbles.rs"

[dependencies.dharitri-sc]
version = "0.13.9"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.9"
