[package]
name = "fair-launch"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "0.13.9"
features = ["dct-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = "0.13.9"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.9"

[dev-dependencies.crowdfunding-dct]
path = "../crowdfunding-dct"

[dev-dependencies.pair-mock]
path = "../pair-mock"
