[package]
name = "fractional-nfts"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/fractional_nfts.rs"

[dependencies.dharitri-sc]
version = "0.13.9"

[dependencies.dharitri-sc-modules]
version = "0.13.9"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.9"
