[package]
name = "on-chain-claim"
version = "0.0.0"
authors = [ "Vlad Bucur <vlad.bucur@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"

[dependencies.dharitri-sc]
version = "0.13.5"

[dependencies.dharitri-sc-modules]
version = "0.13.5"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.5"
