[[bin]]
name = "multisig-interact"
path = "src/multisig_interact.rs"

[package]
name = "multisig-interact"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[dependencies]
toml = "0.8.8"

[dependencies.clap]
version = "4.1.0"
features = [
    "derive",
    "cargo",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.multisig]
path = ".."

[dependencies.dharitri-sc-modules]
version = "0.13.9"

[dependencies.dharitri-sc-snippets]
version = "0.13.8"

[dependencies.dharitri-sc-scenario]
version = "=0.13.9"
