[package]
name = "dharitri-price-aggregator-sc-meta"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.dharitri-price-aggregator-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.13.9"

[dependencies.dharitri-sc-meta]
version = "0.13.9"
default-features = false
